--- a/package.json
+++ b/package.json
@@ -2,33 +2,16 @@
   "name": "robot-pi-client",
   "private": true,
   "version": "0.0.0",
-  "description": "a Sails application",
+  "description": "a Simple application",
   "keywords": [],
   "dependencies": {
-    "ejs": "2.3.4",
-    "grunt": "0.4.5",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-coffee": "0.13.0",
-    "grunt-contrib-concat": "0.5.1",
-    "grunt-contrib-copy": "0.5.0",
-    "grunt-contrib-cssmin": "0.9.0",
-    "grunt-contrib-jst": "0.6.0",
-    "grunt-contrib-less": "1.1.0",
-    "grunt-contrib-uglify": "0.7.0",
-    "grunt-contrib-watch": "0.5.3",
-    "grunt-sails-linker": "~0.10.1",
-    "grunt-sync": "0.2.4",
-    "include-all": "~0.1.6",
-    "mqtt": "^2.9.3",
-    "rc": "1.0.1",
-    "sails": "~0.12.3",
-    "sails-disk": "~0.10.9"
+    "mqtt": "^2.9.3"
   },
   "scripts": {
-    "debug": "node debug app.js",
-    "start": "node app.js"
+    "debug": "node debug index.js",
+    "start": "node index.js"
   },
-  "main": "app.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/silentwalker/robot-pi-client.git"
